--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -23,3 +23,58 @@ IndexView.btnConfirm = 确认
 IndexView.tableTitle = 库存明细表
 #XBUT,4: IndexView.btnEdit
 IndexView.btnEdit = 维护标签
+
+SlpackView.SlpackTitle = 散料打包
+SlpackView.material = 物料
+SlpackView.materialName = 物料名称
+SlpackView.quantity = 库存数量
+SlpackView.batch = 批次
+SlpackView.printBatch = 打印批次
+SlpackView.total = 数量合计
+SlpackView.packNum = 打包个数
+SlpackView.packQuantity = 打包数量
+
+SlpackView.customer = 客户
+SlpackView.btnGenerateHU = 生成标签
+SlpackView.customerName = 客户名称
+SlpackView.customerMaterial = 客户料号
+SlpackView.HuNumber = HU号
+SlpackView.HuQuantity = 数量
+SlpackView.PrintBtn = 打印标签
+
+PrintFragment.title=打印标签
+PrintFragment.SelectLabel=选择标签
+SelectLabelView = 标签选择界面
+SelectLabel = 标签选择
+EntryLabelData = 标签数据录入
+
+HUCode = HU号
+lgort = 仓库
+materialCode = 物料编号
+customerMaterialCode = 客户料号
+batch = 批次
+tlgort = 仓库
+customerCode = 客户编号
+dateStart = 开始日期
+dateEnd = 结束日期
+search = 查询
+confirm = 确定
+print = 确定打印
+selectLabelType = 标签类型选择
+printer = 打印机
+select = 选择
+materialName = 物料名称
+HUCount = HU数量
+printLabels = 需要打印的标签
+order = 工单号
+vendor = 供应商
+line = 线体
+planVersion = 方案版本
+inspectorNum = 检验员工号
+warehouse = 仓别
+inspectionBatch = 检验批
+date = 日期
+factory = 厂区
+
+savetag=保存
+backtable=返回
